Enhance Backend with IMDb Integration for Movies and Locations, Search Enhancements, and Testing for Backend (#19)
* chore: update .gitignore to include .vscode directory

* feat(database): add DataConnection class for MySQL integration and testing configuration

* feat(movie): implement Movie entity, repository, service, and controller for CRUD operations

* feat(import): implement IMDb movies import functionality with download, extraction, and parsing

* feat(import): add import functionality for IMDb movies with profile-based execution and logging configuration

* feat(docker): update Dockerfile for Gradle build and add entrypoint script; create Makefile for build automation

* docs(readme): update README with Makefile usage

* feat(makefile): add targets for building and running without tests, and start/stop commands

* refactor(database): remove DataConnection class and useless test

* feat(movie-controller): enhance movie management with logging and additional endpoints

* feat(location): add Location entity and repository for managing locations

* feat(imdb-locations): implement service for scraping and importing filming locations from IMDb

* feat(location-controller): add LocationController for managing location retrieval and importing from IMDb

* feat(docker): add Selenium service to scrap locations from IMDb with Chrome

* feat(build): add Jsoup, Selenium, SLF4J, and Mockito dependencies for web scraping and logging

* feat(application): add location import in run application and adjust leak detection threshold because of Selenium

* feat(tests): enhance test configuration and add movie/location repository tests

* feat(movie): update movie retrieval and enhance movie entity with additional fields

* feat(location): handle multiple movies with same title when searching locations

* feat(search): add title search counters for movies and locations